# grain

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  package-lock.json  package.json  release-please-config.json
.github/workflows/: binaries-wip.yml  ci.yml  release.yml
cli/: CHANGELOG.md  package.json
compiler/: CHANGELOG.md  dune-project  esy.json  grain.opam  grain_codegen.opam  grain_middle_end.opam  grain_parsing.opam  grain_typed.opam  grain_utils.opam  grainc.opam  package.json
compiler/esy.lock/: index.json
compiler/grainformat/: Utils.re  dune  reformat.re
compiler/grainlsp/: Completion.re  Files.re  Log.re  Lsp.re  Mainserver.re  Messages.re  Notifications.re  Rpc.re  Utils.re  docblock.re  dune  grainlsp.re
compiler/src/parsing/: parser.mly
compiler/src/typed/: env.re  env.rei  translprim.re
compiler/test/formatter_inputs/: aliases.gr
compiler/test/formatter_outputs/: aliases.gr
js-runner/: CHANGELOG.md  package.json
runtime/: CHANGELOG.md
stdlib/: CHANGELOG.md  array.gr  map.gr  number.gr  package.json  string.gr
stdlib/runtime/: numberUtils.gr  stringUtils.gr
