(library
 (name lsp)
 (public_name grainlsp.lsp)
 (modules lsp mainserver files log rpc)
 (libraries
  grain
  grain_diagnostics
  grain_parsing
  grain_utils
  ppx_deriving_yojson.runtime
  yojson)
 (preprocess
  (pps ppx_deriving_yojson)))

(executable
 (name grainlsp)
 (public_name grainlsp)
 (package grainlsp)
 (modules grainlsp)
 (flags
  (:standard
   (:include ./config/flags.sexp)))
 (libraries
  cmdliner
  grain
  grain_utils
  grain_parsing
  grainlsp.lsp
  binaryen.native
  dune-build-info))
